--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Smit Studio</h1>
     </header>
 
     <main>
-        <p>This is a simple website hosted on GitHub Pages.</p>
+        <p>Contact us :- +91 9428042199</p>
     </main>
 
     <footer>
