--- a/index.html
+++ b/index.html
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Website</title>
+    <title>Smit Studio PVT. LTD.</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
+
     <header>
+
         <h1>Smit Studio</h1>
+        <img src="Screenshot 2025-04-10 192844.png" alt="Smit Studio Logo" class="logo">
+
     </header>
+
 
     <main>
         <p>Contact us :- +91 9428042199</p>
     </main>
 
     <footer>
-        <p>&copy; 2025 My Website</p>
-    </footer>
+    <div class="social-links">
+        <a href="https://wa.me/919428042199" target="_blank">
+            <img src="https://img.icons8.com/ios-filled/24/ffffff/whatsapp.png" alt="WhatsApp"> WhatsApp
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img src="https://img.icons8.com/ios-filled/24/ffffff/instagram-new.png" alt="Instagram"> Instagram
+        </a>
+        <a href="https://facebook.com" target="_blank">
+            <img src="https://img.icons8.com/ios-filled/24/ffffff/facebook-new.png" alt="Facebook"> Facebook
+        </a>
+    </div>
+    <p>&copy; Smit Studio</p>
+</footer>
+
 </body>
+
 </html>
