--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <a href="https://wa.me/919428042199" target="_blank">
             <img src="https://img.icons8.com/ios-filled/24/ffffff/whatsapp.png" alt="WhatsApp"> WhatsApp
         </a>
-        <a href="https://instagram.com" target="_blank">
+        <a href="https://instagram.com/smitstudio2005" target="_blank">
             <img src="https://img.icons8.com/ios-filled/24/ffffff/instagram-new.png" alt="Instagram"> Instagram
         </a>
-        <a href="https://facebook.com" target="_blank">
+        <a href="https://facebook.com/" target="_blank">
             <img src="https://img.icons8.com/ios-filled/24/ffffff/facebook-new.png" alt="Facebook"> Facebook
         </a>
     </div>
