--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <a href="https://facebook.com/" target="_blank">
             <img src="https://img.icons8.com/ios-filled/24/ffffff/facebook-new.png" alt="Facebook"> Facebook
         </a>
+       <a href="https://youtube.com/@NP_WEDDING_FILM" target="_blank">
+            <img src="https://img.icons8.com/ios-filled/24/ffffff/youtube-play.png" alt="YouTube"> YouTube
+</a>
+
     </div>
     <p>&copy; Smit Studio</p>
 </footer>
