--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
 
         <h1>Smit Studio</h1>
-        <img src="Screenshot 2025-04-10 192844.png" alt="Smit Studio Logo" class="logo">
+        <img src="logo.png" alt="Smit Studio Logo" class="logo">
 
     </header>
 
